Started adding google translated spanish text as an example, also fixed some alignment on the homepage

--- a/media/css/website.css
+++ b/media/css/website.css
@@ -120,7 +120,7 @@ h4 { color: #113C32; margin: 0.4em 0 0.5em; }
 #content .showcase div { height: 130px; overflow: hidden; }
 #content .showcase h4 { border-bottom: 1px solid #F1F8DB; background: transparent url(../img/icons/check.png) no-repeat scroll 0 0; line-height: 16px; padding-left:20px; }
 	
-#pages { background:#F1F8DB; float:right; width: 249px; height:226px; border:1px solid #DBE5BC; border-left:none; padding:0; margin: 0; border-radius: 0 8px 8px 0; -moz-border-radius: 0 8px 8px 0; -webkit-border-radius: 0 8px 8px 0; -opera-border-radius: 0 8px 8px 0; -khtml-border-radius: 0 8px 8px 0; }
+#pages { background:#F1F8DB; float:right; width: 269px; height:226px; border:1px solid #DBE5BC; border-left:none; padding:0; margin: 0; border-radius: 0 8px 8px 0; -moz-border-radius: 0 8px 8px 0; -webkit-border-radius: 0 8px 8px 0; -opera-border-radius: 0 8px 8px 0; -khtml-border-radius: 0 8px 8px 0; }
 	#pages li { height: 24px; list-style: none; padding: 7px 0 7px 8px; margin: 0 -1px 0 0; border-left:1px solid #B0DB7D; border-radius: 0 8px 8px 0; -moz-border-radius: 0 8px 8px 0; -webkit-border-radius: 0 8px 8px 0; -opera-border-radius: 0 8px 8px 0; -khtml-border-radius: 0 8px 8px 0;}
 		#pages li h3 { height: 22px; padding:2px 0 0; margin: 0; font-size: 1.2em; background: transparent url(../img/icons/check.png) no-repeat scroll 0 0; padding-left: 30px; }
 			#pages li h3 a { color: #F29F3A; text-decoration: none; }
@@ -129,11 +129,11 @@ h4 { color: #113C32; margin: 0.4em 0 0.5em; }
 			#pages li.active h3 { background:transparent url(../img/icons/check_active.png) no-repeat scroll 0 0; font-size:1.2em; text-decoration: underline; }
 				#pages li.active h3, #pages li.active h3 a  { color: #113C32; }
 		#pages li.first { position:relative; top:-1px; margin-bottom:-1px;}
-ul#slides { background:#C1F788; float:left; width: 619px; height:226px; padding:0; margin:0; list-style-type:none; border:1px solid #B0DB7D; border-right:none; border-radius: 8px 0 0 8px; -moz-border-radius: 8px 0 0 8px; -webkit-border-radius: 8px 0 0 8px; -opera-border-radius: 8px 0 0 8px; -khtml-border-radius: 8px 0 0 8px;}
-	#slides li { padding: 10px; margin:0; display: none; width:600px; }
+ul#slides { background:#C1F788; float:left; width: 599px; height:226px; padding:0; margin:0; list-style-type:none; border:1px solid #B0DB7D; border-right:none; border-radius: 8px 0 0 8px; -moz-border-radius: 8px 0 0 8px; -webkit-border-radius: 8px 0 0 8px; -opera-border-radius: 8px 0 0 8px; -khtml-border-radius: 8px 0 0 8px;}
+	#slides li { padding: 10px; margin:0; display: none; width:580px; }
 		#slides li.active { display:block; }
 	#slides li h4 { margin-top:0;}
-	#slides li img { background:#FFF; }
+	#slides li img { background:#FFF; margin-right:10px; }
 
 #content .downloads {}
 	#content .downloads .download-2x { width:240px; padding-right:16px; float:left; border-right: 1px solid rgba(255,124,0,0.4);}
